# inference_server

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: batching.py  config.py  logging_config.py  main.py  model.py  schemas.py
benchmarks/: ANALYSIS.md  README.md  naive-cpu.json  naive-mps.json  onnx-cpu-batch1-c32.json  onnx-cpu-batch16-c32.json  onnx-cpu-batch32-c32.json  onnx-cpu-batch8-c32.json  pytorch-cpu-batch1-c1.json  pytorch-cpu-batch1-c32.json  pytorch-cpu-batch16-c32.json  pytorch-cpu-batch32-c32.json  pytorch-cpu-batch8-c32.json  pytorch-mps-batch1-c1.json  pytorch-mps-batch1-c32.json  pytorch-mps-batch16-c32.json  pytorch-mps-batch32-c32.json  pytorch-mps-batch8-c32.json
scripts/: bench.py  export_onnx.py  naive_bench.py  plot_results.py  run_matrix.py  utils.py
tests/: conftest.py  test_api.py  test_batching.py
