[project]
name = "inference-server"
version = "0.1.0"
description = "Embedding inference server with FastAPI, dynamic batching, and an optional ONNX backend."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.133.1",
    "httpx>=0.28.1",
    "onnxruntime>=1.24.3",
    "optimum[onnxruntime]>=2.1.0",
    "pydantic-settings>=2.13.1",
    "sentence-transformers>=5.2.3",
    "torch>=2.10.0",
    "uvicorn>=0.41.0",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.9",
]
